# Godot-x-Aseprite-MCP-all

./: .gitignore  AGENTS.md  README.md  SETUP.md  claude_desktop_config.json  setup.ps1  setup.sh
Godot-MCP/: README.md  instruction.md
Godot-MCP/addons/godot_mcp/: command_handler.gd
Godot-MCP/addons/godot_mcp/commands/: animation_commands.gd  animation_commands.gd.uid  animation_tree_commands.gd  animation_tree_commands.gd.uid  environment_commands.gd  environment_commands.gd.uid  import_commands.gd  import_commands.gd.uid  material_commands.gd  material_commands.gd.uid  mesh_commands.gd  mesh_commands.gd.uid  navigation_commands.gd  navigation_commands.gd.uid  particle_commands.gd  particle_commands.gd.uid  path_commands.gd  path_commands.gd.uid  playback_commands.gd  playback_commands.gd.uid  project_config_commands.gd  project_config_commands.gd.uid  skeleton_commands.gd  (+7 more)
Godot-MCP/server/: test_integration.cjs  test_integration.mjs
Godot-MCP/server/src/: index.ts
aseprite-mcp/: IMPLEMENTATION_COMPLETE.md  MCP_STARTUP_GUIDE.md  README.md  UPGRADE_ROADMAP.md  instruction.md  pyproject.toml  requirements.txt
aseprite-mcp/aseprite_mcp/core/: commands.py
aseprite-mcp/aseprite_mcp/tools/: __init__.py  ai_features.py  brush.py  canvas.py  cel_operations.py  clipboard.py  drawing.py  drawing_advanced.py  effects.py  export.py  file_utils.py  layer_advanced.py  palette.py  selection.py  slices.py  spritesheet.py  tilemap.py  transform.py
aseprite-mcp/aseprite_mcp/utils/: __init__.py  constants.py  lua_templates.py
aseprite-mcp/tests/: README.md
(+21 files in other folders)
