[project]
name = "aseprite-mcp"
version = "1.0.0"
description = "MCP server for Aseprite — programmatic control of pixel art creation, animation, and game asset workflows via Lua script injection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "aseprite", "pixel-art", "game-dev", "automation"]
authors = [
    { name = "diivi", url = "https://github.com/diivi/aseprite-mcp" },
]

dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[project.urls]
Repository = "https://github.com/Saudadeeee/Godot-x-Aseprite-MCP-all"
"Original Project" = "https://github.com/diivi/aseprite-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aseprite_mcp"]
